Added full health and shield system, HUD rendering, and made some patches to decrease apk size.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D673B6524111A3E3894D50BE75567483
-ProjectName=First Person BP Game Template
+ProjectName=Pointman
+CompanyName=Pied Piper
+ProjectVersion=0.0.0.1
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="MobileStarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+
